--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <div class="hand hour" data-hour-hand></div>
         <div class="hand minute" data-minute-hand></div>
         <div class="hand second" data-second-hand></div>
-        <div class="number number1">1</div>
-        <div class="number number2">2</div>
-        <div class="number number3">3</div>
-        <div class="number number4">4</div>
-        <div class="number number5">5</div>
-        <div class="number number6">6</div>
-        <div class="number number7">7</div>
-        <div class="number number8">8</div>
-        <div class="number number9">9</div>
-        <div class="number number10">10</div>
-        <div class="number number11">11</div>
-        <div class="number number12">12</div>
+        <div class="number number1"><span>|</span>1</div>
+        <div class="number number2"><span>|</span>2</div>
+        <div class="number number3"><span>|</span>3</div>
+        <div class="number number4"><span>|</span>4</div>
+        <div class="number number5"><span>|</span>5</div>
+        <div class="number number6"><span>|</span>6</div>
+        <div class="number number7"><span>|</span>7</div>
+        <div class="number number8"><span>|</span>8</div>
+        <div class="number number9"><span>|</span>9</div>
+        <div class="number number10"><span>|</span>10</div>
+        <div class="number number11"><span>|</span>11</div>
+        <div class="number number12"><span>|</span>12</div>
     </div>
 
 
